# Mock-Interview

./: README.md  pyproject.toml
backend/: app.py  requirements.txt
frontend/: index.html  script.js  style.css
