[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "PrepForge AI Mock Interview"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0"
]